--- a/config/settings.yml
+++ b/config/settings.yml
@@ -9,7 +9,8 @@ links:
     screencast_series: https://screencasts.railstutorial.org/
     news: https://news.railstutorial.org/ 
     michael_hartl: https://www.michaelhartl.com/
-
+    gravatar: https://gravatar.com/emails
+    
 validations:
   name: 
     max_length: 50
