--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,33 @@ yarn-debug.log*
 /test
 
 
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+ .yarn-integrity
+/config/database.yml
+/test
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+ .yarn-integrity
+/config/database.yml
+/test
+
+
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+ .yarn-integrity
+/config/database.yml
+
+/test
