--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,7 +1,11 @@
 links:
-  rails_tutorial: 
-  home_page: https://www.railstutorial.org/ 
-  help_page: https://www.railstutorial.org/help
-  book_page: https://www.railstutorial.org/book
-  about_page: https://www.learnenough.com/
-  rails_page: https://rubyonrails.org/
+  rails_tutorial:
+    home_page: http://www.railstutorial.org/
+    help_page: http://www.railstutorial.org/help
+    book_page: http://www.railstutorial.org/book
+    contact_page: https://www.railstutorial.org/contact
+    rails_page: https://rubyonrails.org/
+    learn_enough: https://www.learnenough.com/
+    screencast_series: https://screencasts.railstutorial.org/
+    news: https://news.railstutorial.org/ 
+    michael_hartl: https://www.michaelhartl.com/
