Chapter 3: Mostly Static Pages (#2)
* Init Project

 #Init Project

 #Gemfile

 #write anything

 #Init Project

 #Gemfile

 #write anything

 #Init Project

 #Gemfile

 #write anything

 #Init Project

 #Gemfile

 #write anything

* Update Gemfile

* Update .gitignore

* Update Gemfile.lock

* Update application.html.erb

* Update about.html.erb

* Update database.yml.example

* Update routes.rb

* Update Gemfile

* Update settings.yml

* Update help.html.erb

* Update about.html.erb

--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -23,3 +23,19 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+default: &default
+  adapter: mysql2
+  encoding: utf8
+  pool: 5
+  username: root
+  password: syahida
+  socket: /var/run/mysqld/mysqld.sock
+
+development:
+  <<: *default
+  database: sample_development
+
+test:
+  <<: *default
+  database: sample_test
+  
