--- a/config/settings.yml
+++ b/config/settings.yml
@@ -14,6 +14,8 @@ links:
 validations:
   name: 
     max_length: 50
+  micropost:
+    max_length: 140
   email:
     max_length: 255
     regex: !ruby/regexp '/\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i'
@@ -21,3 +23,4 @@ validations:
     min_length: 6  
 
 remember_me: 1
+password_expired_time: 2
